<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    tools:context=".ActivityLogin">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="38.3dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right|bottom"
                android:orientation="vertical">

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="7.3dp"
                    android:background="@drawable/small_cicle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/half_circle"
                    android:layout_width="50dp"
                    android:layout_height="100dp"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/half_circle" />

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <com.furkanyilmaz.customfonts.MyTextView_Poppins_Medium
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="32dp"
                android:gravity="center_horizontal"
                android:text="@string/login"
                android:textColor="#333232"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingLeft="14.5dp">

            <View
                android:layout_width="5.6dp"
                android:layout_height="200dp"
                android:background="#38b5f2" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="35.6dp"
                android:background="@drawable/rectangle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/login_relative_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/blue_border_rounded_cornwe">

                        <!-- INPUT -->
                        <com.furkanyilmaz.customfonts.EditText_Poppins_Regular
                            android:id="@+id/login_edittext_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/username_icon"
                            android:background="@drawable/radius_right_edittext"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:paddingLeft="17dp"
                            android:paddingTop="15dp"
                            android:paddingBottom="15dp"
                            android:textCursorDrawable="@drawable/cursor_color"
                            android:textSize="12sp" />

                        <!-- ICON -->
                        <ImageView
                            android:id="@+id/username_icon"
                            android:layout_width="14.7dp"
                            android:layout_height="10.3dp"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="17dp"
                            android:src="@drawable/email" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/login_relative_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/blue_border_rounded_cornwe">

                        <!-- INPUT -->
                        <com.furkanyilmaz.customfonts.EditText_Poppins_Regular
                            android:id="@+id/login_edittext_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/icon"
                            android:background="@android:color/transparent"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:maxLength="15"
                            android:maxLines="1"
                            android:paddingLeft="17dp"
                            android:paddingTop="15dp"
                            android:paddingBottom="15dp"
                            android:textCursorDrawable="@drawable/cursor_color"
                            android:textSize="12sp" />

                        <!-- ICON -->
                        <ImageView
                            android:id="@+id/icon"
                            android:layout_width="14.7dp"
                            android:layout_height="10.3dp"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="17dp"
                            android:src="@drawable/password" />

                    </RelativeLayout>

                    <com.furkanyilmaz.customfonts.MyTextView_Poppins_Medium
                        android:id="@+id/myTextView_Poppins_Medium5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|right"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="15dp"
                        android:text="@string/forgot_password"
                        android:textColor="#1566e0"
                        android:textSize="10.5sp"
                        android:textStyle="bold"
                        android:onClick="onClickForgotPassword"/>

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="90dp"
            android:layout_height="41dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="right"
            android:layout_marginTop="40.3dp"
            android:layout_marginBottom="16.7dp"
            android:background="@drawable/half_blue_roundshape"
            android:gravity="center"
            android:onClick="onClickLogin"
            android:orientation="vertical">

            <com.furkanyilmaz.customfonts.MyTextView_Poppins_SemiBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="#ffffff"
                android:textSize="15sp" />


        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="7dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.furkanyilmaz.customfonts.MyTextView_Poppins_Medium
                android:id="@+id/myTextView_Poppins_Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/not_a_member"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <com.furkanyilmaz.customfonts.MyTextView_Poppins_Medium
                android:id="@+id/login_text_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="onClickRegister"
                android:padding="10dp"
                android:text="@string/sign_up"
                android:textColor="#1566e0"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>


</RelativeLayout>